Add option to scramble pin layout when unlocking (1/2)
Change-Id: I3e2c200a0a31d3c765831bc30280029a50c88051
[ jaysonedson@gmail.com: Ported to Pie/Android11 ]
Signed-off-by: Jason Edson <jaysonedson@gmail.com>

--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -34,4 +34,8 @@
     <string name="platform_revision">Platform</string>
     <string name="total_ram">Total RAM</string>
 
+    <!-- Scramble pin -->
+    <string name="unlock_scramble_pin_layout_title">Scramble numbers</string>
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
+
 </resources>
