Add option to scramble pin layout when unlocking (1/2)
Change-Id: I3e2c200a0a31d3c765831bc30280029a50c88051
[ jaysonedson@gmail.com: Ported to Pie/Android11 ]
Signed-off-by: Jason Edson <jaysonedson@gmail.com>

--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -41,4 +41,8 @@
     <!-- Keywords for Touch Sensitivity feature [CHAR_LIMIT=none] -->
     <string name="keywords_touch_sensitivity">touch, sensitivity, sensitive, screen protector, film, responsive, responsiveness</string>
 
+    <!-- Scramble pin -->
+    <string name="unlock_scramble_pin_layout_title">Scramble numbers</string>
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
+
 </resources>
