--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -22,6 +22,7 @@
     <string name="benzo_extras_quicksettings_title">Quick Settings</string>
     <string name="benzo_extras_buttons_title">Buttons</string>
     <string name="benzo_extras_global_actions_title">Power Menu</string>
+    <string name="benzo_extras_volumesteps_title">Volume Steps</string>
 
      <!-- Benzo version -->
     <string name="benzo_version">Benzo version</string>
