--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -105,12 +105,11 @@
     <PreferenceCategory
         android:title="@string/category_name_display_controls">
 
-        <com.android.settings.widget.PrimarySwitchPreference
-            android:fragment="com.android.settings.display.SmartAutoRotatePreferenceFragment"
-            android:key="auto_rotate"
-            android:title="@string/accelerometer_title"
-            settings:keywords="@string/keywords_auto_rotate"
-            settings:controller="com.android.settings.display.SmartAutoRotatePreferenceController"/>
+        <Preference
+            android:key="display_rotation"
+            android:title="@string/display_rotation_title"
+            android:summary="@string/display_rotation_summary"
+            android:fragment="com.android.settings.preference.DisplayRotation"/>
 
         <SwitchPreference
             android:key="display_white_balance"
