AppInfoDashboard: show link to Google Play
Shows a Google Play store icon in the App Info actionbar
of apps. Excludes aosp built ones, but still works for apps
generally found in /system, like SuperSU The openPlayStore()
code was created by nicholaschum for Substratum, thank you!

jaysonedson: fixed for pie and updated drawable
Change-Id: Ic55e572405d97b1f8ae3f8e3b5aceaa38b6a991e
Signed-off-by: Jason Edson <jaysonedson@gmail.com>

--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -60,4 +60,7 @@
     <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
     <string name="keywords_proximity_wake">accidental, proximity, wake, wake-up</string>
 
+    <!-- App details: open play store link -->
+    <string name="app_play_store">Google Play</string>
+
 </resources>
