--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -50,4 +50,7 @@
     <!-- Whether the dots will be drawn when using the lockscreen pattern -->
     <string name="lockpattern_settings_enable_dots_title">Show pattern dots</string>
 
+    <!-- App details: open play store link -->
+    <string name="app_play_store">Google Play</string>
+
 </resources>
