Settings: Integrate BenzoExtras into Settings
Based on both DU's Nougat and Omni's Oreo implimentations, so
credits to mazda and maxwen for this.

Change-Id: Id4e5367bab5826bfc8bced5684fc2e599f8140c4
Signed-off-by: Joe Maples <joe@frap129.org>
[jaysonedson: Ported to android11/12 and Android.bp]
Signed-off-by: Jason Edson <jaysonedson@gmail.com>

--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -39,6 +39,15 @@
         settings:controller="com.android.settings.connecteddevice.TopLevelConnectedDevicesPreferenceController"/>
 
     <Preference
+        android:fragment="com.benzo.settings.BenzoSettings"
+        android:icon="@drawable/ic_settings_benzo"
+        android:key="top_level_benzo"
+        android:order="-139"
+        android:title="@string/benzo_settings_title"
+        android:summary="@string/benzo_dashboard_summary"
+        settings:controller="com.benzo.settings.TopLevelBenzoSettingsPreferenceController"/>
+
+    <Preference
         android:fragment="com.android.settings.applications.AppDashboardFragment"
         android:icon="@drawable/ic_apps"
         android:key="top_level_apps"
