--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -57,4 +57,9 @@
     <string name="unlock_scramble_pin_layout_title">Scramble numbers</string>
     <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
 
+    <!-- Proximity wake -->
+    <string name="proximity_wake_title">Prevent accidental wake-up</string>
+    <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
+    <string name="keywords_proximity_wake">accidental, proximity, wake, wake-up</string>
+
 </resources>
