--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -55,4 +55,9 @@
     <!-- Whether the dots will be drawn when using the lockscreen pattern -->
     <string name="lockpattern_settings_enable_dots_title">Show pattern dots</string>
 
+    <!-- Proximity wake -->
+    <string name="proximity_wake_title">Prevent accidental wake-up</string>
+    <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
+    <string name="keywords_proximity_wake">accidental, proximity, wake, wake-up</string>
+
 </resources>
