--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -145,6 +145,13 @@
             android:title="@string/tap_to_wake"
             android:summary="@string/tap_to_wake_summary"/>
 
+        <SwitchPreference
+            android:key="proximity_on_wake"
+            android:title="@string/proximity_wake_title"
+            android:summary="@string/proximity_wake_summary"
+            settings:controller="com.android.settings.display.ProximityOnWakePreferenceController"
+            settings:keywords="@string/keywords_proximity_wake" />
+
         <ListPreference
             android:key="theme"
             android:title="@string/device_theme"
