--- a/res/values/benzo_strings.xml
+++ b/res/values/benzo_strings.xml
@@ -24,6 +24,7 @@
     <string name="benzo_extras_global_actions_title">Power Menu</string>
     <string name="benzo_extras_volumesteps_title">Volume Steps</string>
     <string name="benzo_extras_statusbar_title">Statusbar</string>
+    <string name="benzo_extras_visualizer_title">Visualizer</string>
 
      <!-- Benzo version -->
     <string name="benzo_version">Benzo version</string>
