--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -122,7 +122,15 @@
             android:key="peak_refresh_rate"
             android:title="@string/peak_refresh_rate_title"
             android:summary="@string/peak_refresh_rate_summary"
+            android:dependency="force_peak_refresh_rate"
             settings:controller="com.android.settings.display.PeakRefreshRatePreferenceController"/>
+
+        <SwitchPreference
+            android:key="force_peak_refresh_rate"
+            android:title="@string/force_high_refresh_rate_toggle"
+            android:summary="@string/force_high_refresh_rate_desc"
+            android:disableDependentsState="true"
+            settings:controller="com.android.settings.display.ForcePeakRefreshRatePreferenceController"/>
 
         <SwitchPreference
             android:key="touch_sensitivity"
